--- a/style.css
+++ b/style.css
@@ -165,17 +165,23 @@ img {
     border-spacing: 0;
 }
 
-.contact img {
+.git-icon {
+    height: 35px;
+    width: 35px;
+    margin-left: 8px;
+}
+
+.icon {
     height: 50px;
     width: 50px;
 }
 
-.gmail, .insta {
+.github, .gmail, .insta {
     text-decoration: none;
     color: #432;
 }
 
-.gmail:hover, .insta:hover {
+.github:hover, .gmail:hover, .insta:hover {
     color: #13325d;
     text-decoration: underline;
 }
