--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ img {
     padding: 0 1.5rem;
 }
 
+.devide {
+    display: flex;
+    justify-content: center;
+}
+
 .align-center {
     text-align: center;
 }
@@ -77,7 +82,7 @@ img {
     gap: 1rem 1rem;
     grid-template-columns: repeat(4, 1fr);
     text-align: center;
-    margin: 4rem 3rem;
+    margin: 2rem 3rem 4rem;
 }
 
 .pictures .onetoone {
@@ -160,6 +165,86 @@ img {
     list-style: none;
 }
 
+.my-works h3 {
+    margin-top: 1rem;
+}
+
+.callot {
+    background-color: #f8c68d;
+    border-radius: 16px;
+    padding: 0 3rem 2rem;
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+.colortiles {
+    background-color: #d0e2fa;
+    border-radius: 16px;
+    padding: 0 3rem 2rem;
+    width: 100%;
+    font-size: 1.2rem;
+}
+
+.callot h4 img {
+    width: 280px;
+    margin: 2.5rem 0 1rem;
+}
+
+.colortiles h4 img {
+    width: 400px;
+    margin: 2.5rem 0 1rem;
+}
+
+.callot-calendar {
+    width: 330px;
+    margin: 0 1.5rem 0 0;
+}
+
+.callot-hours {
+    width: 320px;
+    border-radius: 16px;
+}
+
+.colortiles-ranking {
+    margin-top: 0.8rem;
+    width: 300px;
+    border-radius: 16px;
+}
+
+.colortiles-play {
+    width: 320px;
+    margin: 2rem 2rem 0 0;
+}
+
+.explanation-callot {
+    margin-top: 2.6rem;
+}
+
+.explanation-colortiles {
+    margin-top: 3rem;
+}
+
+.explanation-callot li, .explanation-colortiles li {
+    margin: 1rem 0 0 1rem;
+}
+
+.df {
+    display: flex;
+    justify-content: right;
+}
+
+.df p {
+    margin-left: 3rem;
+    font-weight: bold;
+}
+
+.right {
+    text-align: right;
+    margin-top: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
 .contact table {
     margin: auto;
     border-spacing: 0;
@@ -176,12 +261,12 @@ img {
     width: 50px;
 }
 
-.github, .gmail, .insta {
+.git-link, .github, .gmail, .insta {
     text-decoration: none;
     color: #432;
 }
 
-.github:hover, .gmail:hover, .insta:hover {
+.git-link:hover, .github:hover, .gmail:hover, .insta:hover {
     color: #13325d;
     text-decoration: underline;
 }
@@ -215,5 +300,15 @@ img {
 
     .intro {
         width: 48%;
+    }
+
+    .responsive {
+        display: flex;
+        justify-content: center;
+    }
+
+    .callot, .colortiles {
+        width: 49%;
+        margin: 1%
     }
 }
